# ingressos-online

./: LICENSE  README.md  docker-compose.yml  init-db.sql  nginx.conf  pdf_text.txt  plan.txt  prometheus.yml
auth/: .env.example  Dockerfile  create_admin.py  main.py  pyproject.toml
auth/api/: dependencies.py  routes.py
auth/core/: config.py  logger.py  security.py
auth/db/: database.py
auth/models/: user.py
auth/schemas/: user.py
auth/services/: auth_service.py  user_service.py
auth/tests/: conftest.py  test_auth.py
events/: .dockerignore  .env.example  Dockerfile  events.db  main.py  pyproject.toml
events/api/: routes.py
events/core/: config.py  security.py
events/models/: event.py  idempotency.py
events/schemas/: event.py
events/tests/: conftest.py  test_api.py
orders/: .dockerignore  .env.example  Dockerfile  main.py  pyproject.toml  worker.py
orders/api/: routes.py
orders/core/: config.py  logger.py  security.py
orders/db/: database.py
orders/models/: order.py
orders/schemas/: order.py
orders/services/: event_client.py  order_service.py  payment_client.py
orders/tests/: conftest.py  test_orders.py
payments/: .env.example  Dockerfile  main.py  pyproject.toml
payments/api/: routes.py
payments/core/: config.py  logger.py
payments/models/: payment.py
payments/schemas/: payment.py
payments/services/: notification_service.py  payment_service.py
payments/tests/: conftest.py  test_payments.py
